force-app/main/default/objects/Retail_Execution__c/Retail_Execution__c.object-meta.xml
<CustomObject>
    <label>Retail Execution</label>
    <pluralLabel>Retail Executions</pluralLabel>
    <description>Retail Execution</description>
    <nameField>
        <label>Retail Execution Name</label>
        <type>AutoNumber</type>
        <displayFormat>REX-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>