force-app/main/default/objects/Retail_Execution__c/fields/Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>Audit_Score__c</fullName>
    <label>Audit Score</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Audit Score</description>
</CustomField>