force-app/main/default/objects/Retail_Execution__c/fields/Display_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Display_Compliant__c</fullName>
    <label>Display Compliant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Display Compliant</description>
</CustomField>