force-app/main/default/objects/Retail_Execution__c/fields/Planogram_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Planogram_Compliant__c</fullName>
    <label>Planogram Compliant</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Planogram Compliant</description>
</CustomField>